--- a/public_html/checkOut.html
+++ b/public_html/checkOut.html
@@ -3,11 +3,11 @@
 <!--
 
 
-Student Info: Name=SupriyaDeore, ID=19299
+
 
 Subject: CS557C_HW1_SUMMER_2015
 
-Author: SUPRIYA DEORE
+Author: deore123
 
 Filename: checkOut.html
 
